--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
+  min-width: 1200px;
 
   font-family: "Cuprum", Arial, sans-serif;
   font-size: 17px;
@@ -30,6 +31,12 @@ a {
   overflow: hidden;
 }
 
+.container {
+  width: 960px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
 .main-buttons {
   background-color: #ee3643;
   border-radius: 3px;
@@ -49,18 +56,57 @@ a {
   background-color: #ba2732;
 }
 
+.catalog-page {
+  font-family: "PT Sans", sans-serif;
+}
+
 /*Шапка сайта*/
 
 .header {
+  margin-bottom: 59px;
+  min-height: 320px;
+
   background-color: #f4f8f9;
   background-image: url("../img/service-bg-pattern.jpg");
   background-position: 0 0;
   background-repeat: repeat;
 }
 
+.catalog-header {
+  margin-bottom: 0;
+}
+
+.header-logo {
+  width: 220px;
+  height: 42px;
+
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+
+  background-color: #ee3643;
+  box-shadow: 0px 5px 0 0 #b52933;
+}
+
+.header-logo:hover {
+  background-color: #ca2c37;
+  box-shadow: 0px 5px 0 0 #9a212a;
+}
+
+.header-logo:active {
+  background-color: #ba2732;
+  box-shadow: 0px 5px 0 0 #8e1e26;
+}
+
 .main-navigation {
   background-color: #293449;
   color: #ffffff;
+}
+
+.main-navigation .container {
+  display: flex;
+  justify-content: space-between;
 }
 
 .main-navigation a {
@@ -109,8 +155,8 @@ a {
 
 .flag-link:active,
 .cart-link:active {
-  background-color: #161d29;
   color: rgba(255, 255, 255, 0.6);
+  background-color: #161d29;
 }
 
 .cart-success {
@@ -134,6 +180,14 @@ a {
   vertical-align: middle;
 }
 
+.header-info {
+  min-height: 158px;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .header-info-adress {
   color: #32425c;
   font-size: 14px;
@@ -142,11 +196,12 @@ a {
 
 .account-link,
 .account-link-name {
-  background-color: #ffffff;
   font-size: 21px;
   line-height: 21px;
   text-align: center;
   vertical-align: middle;
+
+  background-color: #ffffff;
 }
 
 .account-data .account-link {
@@ -166,9 +221,14 @@ a {
 }
 
 .site-navigation {
-  background-color: #32425c;
+  margin: 0;
+  min-height: 60px;
+  display: flex;
+
   border-bottom: solid 3px #293449;
+  background-color: #32425c;
 }
+
 .site-navigation {
   list-style: none;
 }
@@ -193,6 +253,29 @@ a {
 }
 
 /*Основная часть сайта*/
+
+.first-row-service,
+.second-row-service {
+  display: flex;
+  justify-content: space-between;
+
+  margin-bottom: 20px;
+}
+
+.wrapper-service {
+  margin-bottom: 53px;
+}
+
+.type-of-service {
+  width: 300px;
+  height: 123px;
+}
+
+.second-row-service .container-group {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
 .service-caption {
   font-size: 24px;
@@ -240,14 +323,16 @@ a {
 }
 
 .slider-list {
-  list-style: none;
   margin: 0;
   padding: 0;
+
+  list-style: none;
 }
 
 .slider-item {
   width: 620px;
   height: 266px;
+
   color: #ffffff;
   background-color: #32425c;
 }
@@ -282,12 +367,17 @@ a {
   color: #ffffff;
 }
 
-.catalog-page {
-  font-family: "PT Sans", sans-serif;
+.breadcrumbs-list {
+  list-style: none;
 }
 
 .breadcrumbs-list {
-  list-style: none;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+
+  min-height: 59px;
+  margin: 0;
   padding: 0;
 }
 
@@ -297,31 +387,44 @@ a {
 }
 
 .caption {
+  margin: 0;
+
   font-family: "Cuprum", sans-serif;
   color: #32425c;
   font-size: 30px;
   line-height: 30px;
   text-transform: uppercase;
-  margin: 0;
 }
 
 .categories-wrapper {
-  background-color: #f2f6f8;
   min-height: 89px;
   display: flex;
   align-items: center;
   padding-left: 30px;
   margin-bottom: 20px;
+
+  background-color: #f2f6f8;
 }
 
 /*Фильтр и сортировка*/
 
 .filter {
+  width: 220px;
   text-transform: uppercase;
 }
 
 .filter-title {
   font-size: 13px;
+}
+
+.filter-title-wrapper {
+  width: 220px;
+  height: 38px;
+  background-color: #f7f3ec;
+  display: flex;
+  padding-left: 18px;
+  align-items: center;
+  border-radius: 3px;
 }
 
 .filter fieldset {
@@ -360,13 +463,27 @@ a {
 }
 
 .sort-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  height: 38px;
+  margin-bottom: 20px;
+  padding: 0 17px;
+  border-radius: 3px;
+
   font-size: 13px;
   background-color: #f7f3ec;
   text-transform: uppercase;
 }
 
-.sort-row .sort-row-list {
+.sort-row-list {
   list-style: none;
+}
+
+.sort-row-list {
+  display: flex;
+  justify-content: space-around;
 }
 
 .sort-row a {
@@ -388,18 +505,74 @@ a {
 /*Каталог товаров и популярные бренды*/
 
 .popular {
+  min-height: 89px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 20px;
+
   background-color: #f9f5f0;
+}
+
+.popular-brands-container {
+  margin-bottom: 85px;
+}
+
+.catalog {
+  width: 700px;
+}
+
+.catalog-main-section {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 60px;
+}
+
+.catalog-products-container {
+  margin: 20px auto;
 }
 
 .catalog-list {
   list-style: none;
 }
 
+.catalog-list {
+  margin-left: -40px;
+}
+
+.catalog-list {
+  font-size: 0;
+}
+
 .catalog-item {
+  position: relative;
+  display: inline-block;
+  width: 220px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+
   border: solid 1px #eaeaea;
   font-family: "PT Sans", sans-serif;
   font-weight: bold;
   text-align: center;
+  font-size: 16px;
+}
+
+.catalog-item .flag {
+  position: absolute;
+  top: -1px;
+  right: -1px;
+
+  width: 60px;
+  height: 60px;
+
+  text-indent: -1000px;
+  overflow: hidden;
+  z-index: 20;
+}
+
+.catalog-item .flag-new {
+  background: url("../img/icon-new.png") no-repeat 0 0;
 }
 
 .products-container .item-title {
@@ -410,8 +583,18 @@ a {
   margin: 0;
 }
 
+.catalog-page-item:nth-child(3n),
+.index-page-item:nth-child(4n) {
+  margin-right: 0;
+}
+
 .products-container .new-item {
   margin-bottom: 45px;
+}
+
+.catalog-category,
+.catalog-item-title {
+  margin: 0;
 }
 
 .catalog-category b,
@@ -569,7 +752,26 @@ a {
   list-style: none;
 }
 
+.popular-brands-list {
+  margin: 0;
+  padding: 0;
+  min-height: 310px;
+  display: flex;
+  justify-content: space-between;
+  align-content: space-between;
+  flex-wrap: wrap;
+  align-items: stretch;
+}
+
 .popular-brands-item {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+
+  width: 220px;
+  height: 145px;
+
   border: solid 1px #eaeaea;
 }
 
@@ -585,18 +787,32 @@ a {
 /*Сервисы и инфо о продукте*/
 
 .features-service-container {
+  width: 100%;
+  min-height: 522px;
+  margin-bottom: 82px;
+
   background-color: #f4f8f9;
   background-image: url("../img/service-bg-pattern.jpg");
   background-position: 0 0;
   background-repeat: repeat;
 }
 
+.preferences-container {
+  display: flex;
+  justify-content: space-between;
+}
+
 .product-info-article {
+  min-height: 261px;
   background-color: #f2f6f8;
 }
 
 .info-article-container .caption {
   color: #000000;
+}
+
+.product-info-article .container {
+  padding-top: 67px;
 }
 
 .service-desc {
@@ -639,6 +855,8 @@ a {
 }
 
 .info-service {
+  width: 618px;
+
   background-position-x: 100%;
   background-repeat: no-repeat;
 }
@@ -657,6 +875,20 @@ a {
   background-image: url("../img/pic-credit.png");
 }
 
+.info-aside-container {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 86px;
+}
+
+.info-aside-container .advantages {
+  width: 471px;
+}
+
+.info-aside-container .contact-info {
+  width: 300px;
+}
+
 .info-aside-container .caption {
   color: #000000;
 }
@@ -673,14 +905,16 @@ a {
 /*подвал*/
 
 .footer-logo {
-  width: 220px;
-  height: 63px;
-  background-color: #ee3643;
-  box-shadow: 0px 5px 0 0 #b52933;
   display: flex;
   align-items: center;
   align-content: center;
   justify-content: center;
+
+  width: 220px;
+  height: 63px;
+
+  background-color: #ee3643;
+  box-shadow: 0px 5px 0 0 #b52933;
 }
 
 .footer-list {
@@ -692,6 +926,8 @@ a {
 }
 
 .footer-navigation-container {
+  min-height: 193px;
+
   font-size: 18px;
   line-height: 24px;
   color: #ffffff;
@@ -700,6 +936,24 @@ a {
 .footer-first-line-wrapper a,
 .footer-phone {
   color: #ffffff;
+}
+
+.footer-first-line-wrapper,
+.footer-second-line-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-navigation-list,
+.footer-service-list {
+  width: 547px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer-service-list {
+  width: 524px;
 }
 
 .footer-service-list a,
@@ -725,6 +979,12 @@ a {
   font-size: 16px;
 }
 
+.footer-social-list {
+  min-width: 132px;
+  display: flex;
+  justify-content: space-between;
+}
+
 .social-item {
   margin: 0 3px;
   width: 42px;
@@ -739,9 +999,22 @@ a {
   background-color: #ee3643;
 }
 
+.footer-contacts {
+  min-width: 284px;
+  display: flex;
+  justify-content: space-between;
+}
+
 .footer-contacts a:active {
   color: #ee3643;
   text-decoration: none;
+}
+
+.footer-aside-container {
+  min-height: 107px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 /*модальные окна*/
@@ -795,335 +1068,4 @@ a {
   border: none;
   background-color: #ffffff;
   color: #000000;
-}
-
-/* ----- Сеточные стили ----- */
-
-html,
-body {
-  min-width: 1200px;
-}
-
-.container {
-  width: 960px;
-  margin: 0 auto;
-  padding: 0 10px;
-}
-
-.main-header {
-  margin-bottom: 59px;
-
-  /* Временно для сетки */
-  min-height: 320px;
-}
-
-.header-logo {
-  width: 220px;
-  height: 42px;
-  background-color: #ee3643;
-  box-shadow: 0px 5px 0 0 #b52933;
-  display: flex;
-  align-items: center;
-  align-content: center;
-  justify-content: center;
-}
-
-.header-logo:hover {
-  background-color: #ca2c37;
-  box-shadow: 0px 5px 0 0 #9a212a;
-}
-
-.header-logo:active {
-  background-color: #ba2732;
-  box-shadow: 0px 5px 0 0 #8e1e26;
-}
-
-.main-navigation {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.main-navigation .container {
-  display: flex;
-  justify-content: space-between;
-}
-
-.user-wrapper {
-  width: 720px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.header-info {
-  padding: 0;
-  margin: 0 auto;
-  width: 940px;
-  min-height: 158px;
-
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.site-navigation {
-  padding: 0;
-  margin: 0 auto;
-  width: 940px;
-  min-height: 60px;
-
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-}
-
-.first-row-service {
-  display: flex;
-  justify-content: space-between;
-  margin: 0;
-  padding: 0;
-  margin-bottom: 20px;
-}
-
-.wrapper-service {
-  margin-bottom: 53px;
-}
-.second-row-service {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin: 0;
-  padding: 0;
-}
-
-.type-of-service {
-  width: 300px;
-  height: 123px;
-}
-
-.second-row-service .container-group {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.popular {
-  min-height: 89px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 20px;
-}
-
-.catalog-list {
-  margin-left: -40px;
-}
-
-.catalog-item {
-  position: relative;
-  display: inline-block;
-  width: 220px;
-  margin-right: 20px;
-  margin-bottom: 20px;
-}
-
-.catalog-page-item:nth-child(3n) {
-  margin-right: 0;
-}
-
-.index-page-item:nth-child(4n) {
-  margin-right: 0;
-}
-
-.catalog-list {
-  font-size: 0;
-}
-
-.catalog-item {
-  font-size: 16px;
-}
-
-.catalog-item .flag {
-  position: absolute;
-  top: -1px;
-  right: -1px;
-
-  width: 60px;
-  height: 60px;
-
-  text-indent: -1000px;
-  overflow: hidden;
-  z-index: 20;
-}
-
-.catalog-item .flag-new {
-  background: url("../img/icon-new.png") no-repeat 0 0;
-}
-
-.catalog-category,
-.catalog-item-title {
-  margin: 0;
-}
-
-.popular-brands-list {
-  margin: 0;
-  padding: 0;
-  min-height: 310px;
-  display: flex;
-  justify-content: space-between;
-  align-content: space-between;
-  flex-wrap: wrap;
-  align-items: stretch;
-}
-
-.popular-brands-item {
-  width: 220px;
-  height: 145px;
-
-  display: flex;
-  align-items: center;
-  align-content: center;
-  justify-content: center;
-}
-
-.popular-brands-container {
-  margin-bottom: 85px;
-}
-
-.features-service-container {
-  width: 100%;
-  min-height: 522px;
-  margin-bottom: 82px;
-}
-
-.preferences-container {
-  display: flex;
-  justify-content: space-between;
-}
-
-.info-aside-container {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 86px;
-}
-
-.info-aside-container .advantages {
-  width: 471px;
-}
-
-.info-aside-container .contact-info {
-  width: 300px;
-}
-
-.info-service {
-  width: 618px;
-}
-
-.footer-navigation-container {
-  min-height: 193px;
-}
-
-.footer-first-line-wrapper {
-  display: flex;
-  justify-content: space-between;
-}
-
-.footer-navigation-list {
-  width: 547px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.footer-second-line-wrapper {
-  display: flex;
-  justify-content: space-between;
-}
-
-.footer-service-list {
-  width: 524px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.footer-aside-container {
-  min-height: 107px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.footer-social-list {
-  min-width: 132px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.footer-contacts {
-  min-width: 284px;
-  display: flex;
-  justify-content: space-between;
-}
-
-/*каталог*/
-
-.breadcrumbs-list {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  min-height: 59px;
-  margin: 0;
-}
-
-.filter-title-wrapper {
-  width: 220px;
-  height: 38px;
-  background-color: #f7f3ec;
-  display: flex;
-  padding-left: 18px;
-  align-items: center;
-  border-radius: 3px;
-}
-
-.form-container {
-  width: 220px;
-}
-
-.sort-row {
-  width: 700px;
-  height: 38px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 17px;
-  border-radius: 3px;
-  margin-bottom: 20px;
-}
-
-.sort-row-list {
-  width: 443px;
-  display: flex;
-  justify-content: space-around;
-}
-
-.catalog-products-container {
-  width: 700px;
-  margin: 20px auto;
-}
-
-.catalog-main-section {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 60px;
-}
-
-.product-info-article {
-  min-height: 261px;
-}
-
-.product-info-article-wrapper {
-  margin: 0;
-  padding-top: 67px;
 }
