--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,11 @@ a {
   justify-content: space-between;
 }
 
+.main-navigation .user-wrapper {
+  display: flex;
+  align-items: center;
+}
+
 .main-navigation a {
   color: #ffffff;
 }
@@ -220,7 +225,7 @@ a {
   color: rgba(0, 0, 0, 0.3);
 }
 
-.site-navigation {
+.site-navigation-list {
   margin: 0;
   min-height: 60px;
   display: flex;
@@ -229,26 +234,26 @@ a {
   background-color: #32425c;
 }
 
-.site-navigation {
+.site-navigation-list {
   list-style: none;
 }
 
-.site-navigation a {
+.site-navigation-list a {
   color: #ffffff;
   line-height: 17px;
 }
 
-.site-navigation li:hover,
-.site-navigation li:focus {
+.site-navigation-list li:hover,
+.site-navigation-list li:focus {
   background-color: #293449;
 }
 
-.site-navigation li:active {
+.site-navigation-list li:active {
   background-color: #1d2739;
   color: rgba(255, 255, 255, 0.5);
 }
 
-.site-navigation a:active {
+.site-navigation-list a:active {
   color: rgba(255, 255, 255, 0.5);
 }
 
@@ -560,6 +565,8 @@ a {
 
 .catalog-list {
   font-size: 0;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .catalog-item {
@@ -956,8 +963,7 @@ a {
   color: #ffffff;
 }
 
-.footer-first-line-wrapper,
-.footer-second-line-wrapper {
+.footer-wrap {
   display: flex;
   justify-content: space-between;
 }
